--- a/content/data/bav/reverse-penny-drop/api-integration.mdx
+++ b/content/data/bav/reverse-penny-drop/api-integration.mdx
@@ -366,7 +366,7 @@ _Please note that `accountType` can be `BANK_ACCOUNT`, `PPI` or `UNKNOWN`_
 <hr className="tertiary" />
 
 _`bankAccountType` is an optional data field, you may not receive the value always. (Please contact with Setu team to know more about this feature.)_
-_The value can be `SAVINGS`, `CURRENT`, `DEFAULT`, `NRO`, `NRE`_
+_The value can be `SAVINGS`, `CURRENT`, `NRO`, `NRE`_
 
 <hr className="tertiary" />
 
