--- a/content/data/bav/penny-drop/api-integration/async.mdx
+++ b/content/data/bav/penny-drop/api-integration/async.mdx
@@ -123,6 +123,7 @@ Call this API to know verification status of request that was previously initiat
               <p>You get the name of the account holder in the response.</p>
               <CodeBlockWithCopy language="json">
                 {`{
+  "id": "d9342684-1300-4fa8-8344-cc861a20a488",
   "code": "BAV00",
   "verification": "success", 
   "message": "Account exists and is active.", 
@@ -156,6 +157,7 @@ Call this API to know verification status of request that was previously initiat
               <h5>Response</h5>
               <CodeBlockWithCopy language="json">
                 {`{ 
+    "id": "d9342684-1300-4fa8-8344-cc861a20a488",
     "code": "BAVM1", 
     "message": "This transaction is not valid for this account.", 
     "verification": "failed",
@@ -214,6 +216,7 @@ Call this API to know verification status of request that was previously initiat
               <h5>Response</h5>
               <CodeBlockWithCopy language="json">
                 {`{ 
+  "id": "d9342684-1300-4fa8-8344-cc861a20a488",
   "verification": "pending",
   "traceId": "...",
 } `}
@@ -240,6 +243,7 @@ Call this API to know verification status of request that was previously initiat
               <h5>Response</h5>
               <CodeBlockWithCopy language="json">
                 {`{
+  "id": "d9342684-1300-4fa8-8344-cc861a20a488",
   "code": "BAVM1",  
   "verification": "failed", 
   "message": "This account does not exist or is invalid." 
@@ -267,9 +271,12 @@ Call this API to know verification status of request that was previously initiat
               <h5>Response</h5>
               <CodeBlockWithCopy language="json">
                 {`{
-    "code": "downstream_service_error", 
-    "detail": "Downstream service error. Please reach out to support along with the traceId.", 
-    "traceId": "..." 
+    "id": "....",
+    "error": {
+      "code": "upstream_service_error", 
+      "detail": "Upstream service error. Please reach out to support along with the traceId.", 
+      "traceId": "..." 
+    }
 } `}
               </CodeBlockWithCopy>
             </>
