--- a/content/data/bav/penny-drop/api-integration/sync.mdx
+++ b/content/data/bav/penny-drop/api-integration/sync.mdx
@@ -79,8 +79,9 @@ While testing on Sandbox, you may use the following sample values—
     "name": "name of the account holder", 
     "transactionReference": "120716373986",
     "verifiedAt": "2017-08-28T09:36:18+00:00"
-  } 
-  "traceId": "d51bd129-4d71-4863-be98-a7729ecad34c"
+  },
+  "id": "d9342684-1300-4fa8-8344-cc861a20a477",
+  "traceId": "..."
 } `}
               </CodeBlockWithCopy>
             </>
@@ -110,6 +111,7 @@ While testing on Sandbox, you may use the following sample values—
               <h5>Response</h5>
               <CodeBlockWithCopy language="json">
                 {`{
+  "id": "d9342684-1300-4fa8-8344-cc861a20a488",
   "code": "BAVM1", 
   "verification": "failed", 
   "message": "This account does not exist or is invalid." 
@@ -141,9 +143,12 @@ While testing on Sandbox, you may use the following sample values—
               <h5>Response</h5>
               <CodeBlockWithCopy language="json">
                 {`{
-    "code": "internal_server_error", // or upstream_service_error
-    "detail": "Internal Server Error. Please reach out to support along with the traceId.",
-    "traceId": "..."
+   "id": "d9342684-1300-4fa8-8344-cc861a20a488",
+   "error": {
+      "code": "internal_server_error", // or upstream_service_error
+      "detail": "Internal Server Error, Please reach out to support along with the traceId.",
+      "traceId": "..."
+   }
 } `}
               </CodeBlockWithCopy>
             </>
