Update order in OKYC

--- a/content/data/okyc/api-reference.mdx
+++ b/content/data/okyc/api-reference.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_title: API Reference
+sidebar_title: API reference
 page_title: Offline Aadhar API reference
-order: 5
+order: 6
 visible_in_sidebar: true
 ---
