--- a/content/data/bav/reverse-penny-drop/api-integration.mdx
+++ b/content/data/bav/reverse-penny-drop/api-integration.mdx
@@ -2,7 +2,7 @@
 sidebar_title: API integration
 page_title: RPD API integration
 order: 2
-visible_in_sidebar: false
+visible_in_sidebar: true
 ---
 
 # API Integration
