--- a/content/data/bav/reverse-penny-drop/quickstart.mdx
+++ b/content/data/bav/reverse-penny-drop/quickstart.mdx
@@ -2,7 +2,7 @@
 sidebar_title: Quickstart
 page_title: Quickstart for reverse penny drop
 order: 1
-visible_in_sidebar: false
+visible_in_sidebar: true
 ---
 
 ## Reverse penny drop
