Enable COU quickstart + custom payment guides

--- a/content/payments/billpay/api-integration/quickstart.mdx
+++ b/content/payments/billpay/api-integration/quickstart.mdx
@@ -165,7 +165,7 @@ The screens you build as part of your app needs to conform to BBPS guidelines. Y
 <p>
     Here is a{" "}
     <a
-        href="https://bills.setu.co/cou/categories/91de2627-b66e-49f6-afba-0285c8da9b0a"
+        href="https://billpay.setu.co/cou/categories/91de2627-b66e-49f6-afba-0285c8da9b0a"
         target="_blank"
     >
         BBPS-compliant UX flow
