--- a/content/payments/billpay/pre-built-screens/custom-payment.mdx
+++ b/content/payments/billpay/pre-built-screens/custom-payment.mdx
@@ -2,7 +2,7 @@
 sidebar_title: Custom payment
 page_title: BBPS Billpay custom payment
 order: 2
-visible_in_sidebar: false
+visible_in_sidebar: true
 ---
 
 ## Enabling your payment gateway
