--- a/content/payments/billpay/pre-built-screens/quickstart.mdx
+++ b/content/payments/billpay/pre-built-screens/quickstart.mdx
@@ -5,6 +5,20 @@ order: 1
 visible_in_sidebar: true
 ---
 
+## Quickstart—Pre-built screens
+
+We offer this product in different integration modes. Choose how you’d like to integrate and get started right away.
+
+<NestedEndpoints />
+
 <br/>
 
-<Callout type="tip">We're revamping the documentation for this section. Check out the <a href="/payments/billpay/pre-built-screens/api-reference">API Reference</a>. Please write to <a href="https://setu.co/support" target="_blank">Setu Support</a> for more details.</Callout>
+<Callout type="highlight">
+  Setu’s pre-built screens—for website, iOS and Android—come with in-built UPI
+  payment option. However, if you’d like to integrate your own payment gateway,
+  please refer to{" "}
+  <a href="/payments/billpay/custom-payment" target="_blank">
+    these guides
+  </a>{" "}
+  too.
+</Callout>
