--- a/content/payments/billpay/pre-built-screens/quickstart/cross-platform.mdx
+++ b/content/payments/billpay/pre-built-screens/quickstart/cross-platform.mdx
@@ -2,7 +2,7 @@
 sidebar_title: Cross platform
 page_title: BBPS Billpay cross platform integration
 order: 4
-visible_in_sidebar: false
+visible_in_sidebar: true
 ---
 
 ## Cross platform implementation
@@ -31,7 +31,6 @@ final webView = WebView(
   initialUrl: _url,
   javascriptMode: JavascriptMode.unrestricted,
   navigationDelegate: (NavigationRequest request) {
-      //Ref: https://bills-sandbox.setu.co/docs/android-simple
       if (!request.url.contains('.setu.co')) {
           print('blocking navigation to $request}');
           _launchAppLink(request.url); //Declared above
