--- a/content/payments/billpay/pre-built-screens/quickstart/iOS.mdx
+++ b/content/payments/billpay/pre-built-screens/quickstart/iOS.mdx
@@ -2,7 +2,7 @@
 sidebar_title: iOS
 page_title: BBPS Billpay iOS integration
 order: 3
-visible_in_sidebar: false
+visible_in_sidebar: true
 ---
 
 ## iOS integration
@@ -61,7 +61,7 @@ The above request will return URL based on the input params. Hereâ€™s a sampleâ€
 
 <CodeBlockWithCopy language="json">
     {`{
-  "link": "https://cou-whitelabelled-dev.setu.co/cou/categories/5f1fb0db-b2ed-4222-bb2f-53d238df370a"
+  "link": "https://billpay-qa.setu.co/cou/categories/5f1fb0db-b2ed-4222-bb2f-53d238df370a"
 }`}
 </CodeBlockWithCopy>
 
