--- a/content/payments/billpay/pre-built-screens/custom-payment/apis.mdx
+++ b/content/payments/billpay/pre-built-screens/custom-payment/apis.mdx
@@ -2,7 +2,7 @@
 sidebar_title: Required APIs
 page_title: BBPS Billpay APIs for custom payment
 order: 1
-visible_in_sidebar: false
+visible_in_sidebar: true
 ---
 
 ## APIs required for custom payment
