--- a/content/payments/billpay/pre-built-screens/custom-payment/website.mdx
+++ b/content/payments/billpay/pre-built-screens/custom-payment/website.mdx
@@ -2,7 +2,7 @@
 sidebar_title: Website
 page_title: BBPS Billpay website integration for custom payment
 order: 2
-visible_in_sidebar: false
+visible_in_sidebar: true
 ---
 
 ## Web integration with your own payment gateway
@@ -53,7 +53,7 @@ Note that the API key is issued by you
   "orderId": "je9V7wWs9N3w",
   "amount": 1201.00,
   "customerMobileNumber": "9481773053",
-  "postPaymentUrl": "https://bills.setu.co/7c58e511-c1f5-4e1b-8470-50fc2fbd30a4/post-payment/c4e154e6-7b2b-4e0a-9749-60499b61ce93",
+  "postPaymentUrl": "https://billpay.setu.co/7c58e511-c1f5-4e1b-8470-50fc2fbd30a4/post-payment/c4e154e6-7b2b-4e0a-9749-60499b61ce93",
   "allowedPaymentMethods": [
     "CASH", "UPI"
   ]
