--- a/content/payments/billpay/pre-built-screens/quickstart/android.mdx
+++ b/content/payments/billpay/pre-built-screens/quickstart/android.mdx
@@ -2,7 +2,7 @@
 sidebar_title: Android
 page_title: BBPS Billpay Android integration
 order: 2
-visible_in_sidebar: false
+visible_in_sidebar: true
 ---
 
 ## Android integration
@@ -58,7 +58,7 @@ The above request will return URL based on the input params. Hereâ€™s a sampleâ€
 
 <CodeBlockWithCopy language="json">
     {`{
-  "link": "https://cou-whitelabelled-dev.setu.co/cou/categories/5f1fb0db-b2ed-4222-bb2f-53d238df370a"
+  "link": "https://billpay-qa.setu.co/cou/categories/5f1fb0db-b2ed-4222-bb2f-53d238df370a"
 }`}
 </CodeBlockWithCopy>
 
