--- a/content/payments/billpay/pre-built-screens/quickstart/api.mdx
+++ b/content/payments/billpay/pre-built-screens/quickstart/api.mdx
@@ -2,7 +2,7 @@
 sidebar_title: API
 page_title: BBPS Billpay API
 order: 2
-visible_in_sidebar: false
+visible_in_sidebar: true
 ---
 
 ## API integration
@@ -99,7 +99,7 @@ The screens you build as part of your app needs to conform to BBPS guidelines. Y
 <p>
   Here is a{" "}
   <a
-    href="https://bills.setu.co/cou/categories/91de2627-b66e-49f6-afba-0285c8da9b0a"
+    href="https://billpay.setu.co/cou/categories/91de2627-b66e-49f6-afba-0285c8da9b0a"
     target="_blank"
   >
     BBPS-compliant UX flow
