--- a/content/payments/billpay/pre-built-screens/quickstart/website.mdx
+++ b/content/payments/billpay/pre-built-screens/quickstart/website.mdx
@@ -2,7 +2,7 @@
 sidebar_title: Website
 page_title: BBPS Billpay website
 order: 1
-visible_in_sidebar: false
+visible_in_sidebar: true
 ---
 
 ## Website integration
@@ -58,7 +58,7 @@ This step gives a one time Setu URL to be used by your customer for the bill fet
 The <a href="/payments/billpay/api-reference/white-label#/category~Link/operation~getLink" target="_blank">Create link API</a> needs to be called when you want to obtain a one time link to load Setu’s bill payment screens.
 
 <CodeBlockWithCopy language="bash">
-    {`POST https://bills-sandbox.setu.co/direct-link`}
+    {`POST https://qa-coudc.setu.co/api/v1/ethereal/link`}
 </CodeBlockWithCopy>
 
 <Callout type="tip">
