Update equities FI type sample to include new fields

--- a/content/data/account-aggregator/fi-data-types.mdx
+++ b/content/data/account-aggregator/fi-data-types.mdx
@@ -1833,13 +1833,16 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
       "holder": [
         {
           "ckycCompliance": "true",
-          "dematId": "Y68HS92S09S",
           "dob": "24-07-1985",
           "email": "sushila_rama.90@gmail.com",
           "mobile": "91729391923",
           "name": "Sushila Rama",
           "nominee": "REGISTERED",
-          "pan": "BYHPL1234T"
+          "pan": "BYHPL1234T",
+          "dematId": "1234567898765432",
+          "dpId": "12345678",
+          "boId": "98765432",
+          "brokerName": "SETU BROKERS LIMITED"
         }
       ]
     }
