Update COU WL docs, fix broken links

--- a/content/payments/billpay/pre-built-screens/custom-payment.mdx
+++ b/content/payments/billpay/pre-built-screens/custom-payment.mdx
@@ -38,13 +38,13 @@ Setu’s pre-built screens solution supports UPI payments by default. However, y
 You need to call the following APIs—
 
 1. <a
-       href="/payments/billpay/api-reference/white-label#/category~Link/operation~getLink"
+       href="/payments/billpay/api-reference/white-label#/category~Link_Generation/operation~EtherealLinkRequest"
        target="_blank"
    >
        Create one time link
    </a>
 2. <a
-       href="/payments/billpay/api-reference/white-label#/category~Payment/operation~paymentWebhook"
+       href="/payments/billpay/api-reference/white-label#/category~CustomPaymentWebhook/operation~CouCustomPaymentWebhook"
        target="_blank"
    >
        Confirm payment
