--- a/content/payments/billpay/pre-built-screens/custom-payment/apis.mdx
+++ b/content/payments/billpay/pre-built-screens/custom-payment/apis.mdx
@@ -50,7 +50,7 @@ The `orderId` is always prefixed with `COUWL` to identify Setu payment requests.
 }`}
 </CodeBlockWithCopy>
 
-See <a href="/payments/billpay/api-reference/white-label#/category~Payment/operation~paymentWebhook" target="_blank">API reference</a> for more information.
+See <a href="/payments/billpay/api-reference/white-label#/category~CustomPaymentWebhook/operation~CouCustomPaymentWebhook" target="_blank">API reference</a> for more information.
 
 <hr class="primary" />
 
