--- a/content/payments/billpay/pre-built-screens/custom-payment/website.mdx
+++ b/content/payments/billpay/pre-built-screens/custom-payment/website.mdx
@@ -21,15 +21,20 @@ visible_in_sidebar: true
 The following steps describe a typical payment scenario—
 
 1. User initiates bill payment on Setu’s pre-built screen
-2. Setu calls the <a href="/payments/billpay/custom-payment/website#get-payment-link-api">Get payment link API</a> from Setu backend to your backend—you give us a one time link where we can redirect your customer for payment
+2. Setu calls the <a href="/payments/billpay/pre-built-screens/custom-payment/website#get-payment-link-api">Get payment link API</a> from Setu backend to your backend—you give us a one time link where we can redirect your customer for payment
 3. User is redirected to the one time link, and the payment is handled by you
 4. User completes payment
 5. We get webhook event confirming payment
 6. You redirect the user back to the post payment URL, depending on success or failure of payment.
 
+<img
+  src="https://storage.googleapis.com/strapi-assets/latest/COU_WL_custom_payment_web_(1)/COU_WL_custom_payment_web_(1).gif"
+  width="100%"
+/>
+
 <hr class="tertiary" />
 
-##### Get payment link API
+#### Get payment link API
 
 You need to implement the following API for this purpose
 
@@ -80,6 +85,6 @@ The following codes are supported by Setu—
 The user will proceed to pay on the link. Once the payment is done, the following steps need to be completed by you—
 
 1. Send Setu the webhook event for payment.
-2. Redirect the user to post payment page at `postPaymentUrl` provided above
+2. Redirect the user to post payment page at `postPaymentUrl` provided above.
 
 <WasPageHelpful />
