--- a/content/payments/billpay/pre-built-screens/quickstart/website.mdx
+++ b/content/payments/billpay/pre-built-screens/quickstart/website.mdx
@@ -24,7 +24,7 @@ Setu provides ready to use screens for the website integration. Contact Setu to 
 There are 2 options for website integration, depending on how you interact with your users—
 
 -   If you do not verify your users with mobile based OTP login, use **Option 1 — Get static URL**. In this scenario, Setu will share a static link with you, which can be added/embedded in your website. Setu will handle mobile OTP verification for your customer’s number.
--   If you already verify your customers through login, you can use **Option 2 — Get dynamic URL**. In this scenario, it is assumed that you have already verified the mobile number of your user. Use the <a href="/payments/billpay/api-reference/white-label#/category~Link/operation~getLink" target="_blank">**Create link API**</a> to get this URL and bypass Setu’s OTP verification.
+-   If you already verify your customers through login, you can use **Option 2 — Get dynamic URL**. In this scenario, it is assumed that you have already verified the mobile number of your user. Use the <a href="/payments/billpay/api-reference/white-label#/category~Link_Generation/operation~EtherealLinkRequest" target="_blank">**Create link API**</a> to get this URL and bypass Setu’s OTP verification.
 
 <hr class="primary" />
 
@@ -55,7 +55,7 @@ for getting enabled on production.
 
 This step gives a one time Setu URL to be used by your customer for the bill fetch or payment flow. Generate this link uniquely for each of your customers and make sure you get a new link each time your customer wants to get back to the bill payment journey.
 
-The <a href="/payments/billpay/api-reference/white-label#/category~Link/operation~getLink" target="_blank">Create link API</a> needs to be called when you want to obtain a one time link to load Setu’s bill payment screens.
+The <a href="/payments/billpay/api-reference/white-label#/category~Link_Generation/operation~EtherealLinkRequest" target="_blank">Create link API</a> needs to be called when you want to obtain a one time link to load Setu’s bill payment screens.
 
 <CodeBlockWithCopy language="bash">
     {`POST https://qa-coudc.setu.co/api/v1/ethereal/link`}
