--- a/content/data/bav/analyse-vpa/quickstart.mdx
+++ b/content/data/bav/analyse-vpa/quickstart.mdx
@@ -2,7 +2,7 @@
 sidebar_title: Quickstart
 page_title: Quickstart for Analyse UPI VPA
 order: 1
-visible_in_sidebar: false
+visible_in_sidebar: true
 ---
 
 ## Analyse UPI VPA
