Fix: Setu BAV doc

--- a/content/data/bav/setu-bav/notifications.mdx
+++ b/content/data/bav/setu-bav/notifications.mdx
@@ -33,7 +33,7 @@ Here’s a sample notification of a successful Setu BAV request, with the corres
         "bankAccountNumber": "20161854381",
         "bankAccountName": "MR PAVANKUMAR NAGARAJ KAMAT",
         "bankAccountIfsc": "SBIN0015421",
-        "entityType": "MERCHANT", // or "INDIVIDUAL". Note: this key will be present in case of PENNYDROP
+        "entityType": "MERCHANT", // or "INDIVIDUAL". Note: this key will be present in case of fulfillmentType=PENNYLESS
         "ifscCrossCheck": true,
         "ifscDetails": { // if ifscCrossCheck=true
           "name": "State Bank of India",
@@ -53,7 +53,7 @@ Here’s a sample notification of a successful Setu BAV request, with the corres
           "swift": ""
         }
       },
-      "merchantDetails": { // if entityType is "MERCHANT"
+      "merchantDetails": { // if entityType is "MERCHANT" AND fulfillmentType is "PENNYLESS"
         "mccCode": "1520",
         "identifier": {
           "merchantType": "SMALL",
