Updated the ETF fields

--- a/content/data/account-aggregator/fi-data-types.mdx
+++ b/content/data/account-aggregator/fi-data-types.mdx
@@ -1105,7 +1105,11 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
         "mobile": "91729391923",
         "name": "Sushila Rama",
         "nominee": "REGISTERED",
-        "pan": "BYHPL1234T"
+        "pan": "BYHPL1234T",
+        "dematId": "1234567898765432",
+        "dpId": "12345678",
+        "boId": "98765432",
+        "brokerName": "SETU BROKERS LIMITED"
       }
     }
   },
