Add city and state mapping sheet

--- a/content/payments/billpay/api-integration/objects.mdx
+++ b/content/payments/billpay/api-integration/objects.mdx
@@ -45,7 +45,7 @@ Payment modes supported by a biller.
 
 ## State and City mapping
 
-[Click here &#8599](#) for State and City mapping
+[Click here &#8599](https://docs.google.com/spreadsheets/d/18LYdPbEw5JCB-bOp3gacbV6xUeHun_gBxbLeGxBuhK8/edit?usp=sharing) for State and City Biller Coverage Mapping
 
 ## Customer
 
