Update COU WL docs for custom payment & quickstart

--- a/content/payments/billpay/pre-built-screens/custom-payment/iOS.mdx
+++ b/content/payments/billpay/pre-built-screens/custom-payment/iOS.mdx
@@ -148,9 +148,9 @@ The `WKWebviewDownloadHelper` which downloads our PDF file is used as below
 
 The `initiate_payment` case in the the `userContentController` takes the following parameters
 
-- `orderId` on the Setu COU System. Example— `Z7pFtTgr9LtO`
-- `amount` to be paid by the customer: Example— `3522.20`
-- `callback` which needs to be loaded if the payment is completed. Example—`//billpay.setu.co/cou/payment-callback/68c7217b-8fa7-4c1f-8e5f-317ff3027668`
+- `orderId` on the Setu COU System. It always starts with `COUWL`. Example— `COUWLZ7pFtTgr9LtO`
+- `amount` to be paid by the customer. Example — `3522.20`
+- `callback` URL which needs to be loaded in the webview once the payment is completed. Example — `https://billpay.setu.co/payment-callback/68c7217b-8fa7-4c1f-8e5f-317ff3027668`
 - `beneficiaryVPA` to which amount is to be transferred—this is relevant only if you can transfer in real time using UPI rails.
 - `remarks` used to communicate information between mobile app and webview
 
@@ -159,7 +159,7 @@ When `initiate_payment` case is called by the `webview`, your app needs to do th
 1. Remove the webview
 2. Initiate the payment flow
 3. Send Setu the webhook event for payment—this need not be done for UPI transfers in real time
-4. Once payment is executed, load the webview again for callback URL
+4. Once payment is executed, load the webview again with the callback URL
 
 <Callout type="warning">
   Note that any <code>ViewController</code> relating to the payment flow, will
