--- a/content/payments/billpay/pre-built-screens/quickstart/android.mdx
+++ b/content/payments/billpay/pre-built-screens/quickstart/android.mdx
@@ -161,7 +161,7 @@ The interface will contain 1 method—
 -   `unload` This should be used by the your app to dismiss the webview.
 
 <Callout type="tip">
-    <b>Special use case:</b> This <code>unload</code> function can also be used for dismissing the webview and redirecting a user back to your native app once a bill payment journey is completed (i.e. payment is successful) via a CTA from the Setu webview.
+    <b>Special use case:</b> This <code>unload</code> function can also be used for dismissing the webview and redirecting a user back to your native app once a bill payment journey is completed (i.e. payment is successful) via a CTA from the Setu webview. Please let our team know if you would like to enable this use case for your app.
 </Callout>
 
 <hr class="primary" />
