Update COU WL docs

--- a/content/payments/billpay/pre-built-screens/webhooks.mdx
+++ b/content/payments/billpay/pre-built-screens/webhooks.mdx
@@ -1,11 +1,11 @@
 ---
-sidebar_title: User events
-page_title: BBPS Billpay user events
+sidebar_title: Webhooks
+page_title: BBPS Billpay webhooks
 order: 2
 visible_in_sidebar: true
 ---
 
-## User events
+## Webhooks/Notifications
 
 A webhook can be configured to listen to users’ events and log them for analytics and re-engagement purposes.
 
