[AA] Updated the errorcode-errormsg mapping

--- a/content/data/account-aggregator/embed-setu-aa.mdx
+++ b/content/data/account-aggregator/embed-setu-aa.mdx
@@ -125,8 +125,11 @@ The create consent request also takes a `redirectUrl`. Once the approval/rejecti
 
 - **success** — This is a boolean representing whether the approval was successful or not. (`true` for approved and `false` for rejection)
 - **id** — Request ID of the consent
-- **errorcode** — This is the error code representing the reason for failure. Sent only if `success = false`.
+- **errorcode** — This is the error code representing the reason for failure. Sent only if `success = false`. Error code `1` means user rejected the consent and `5` means user cancelled the consent.
+- **errormsg** — This is the error message representing the detailed reason for failure. Sent only if `success = false`. To know more about the error messages and it's meaning, please refer to the <a href="/data/account-aggregator/api-integration/notifications#consent-error-codes">Consent error codes</a> section.
 
+
+<br/>
 The redirect URL can be configured separately for each consent request, and would also send back any query params that you already have in the URL.
 
 Please find the below integration steps to embed Setu’s consent manager screens into your application.
